--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,8 @@ section {
 }
 
 form {
+    display: flex;
+    justify-content: flex-start;
     height: 54px;
     padding: 0;
     margin-top: 16px;
@@ -211,8 +213,6 @@ input:focus {
 }
 
 .filter-text {
-    margin-left: 15px;
-    margin-top: 7px;
     margin: 0 15px 0 15px;
 }
 
@@ -259,12 +259,23 @@ li.filter-btn:hover::after {
     font-size: 18px;
 }
 
+.search-i {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
 .fa-info {
     color: #0065FC;
     font-size: 12px;
 }
 
-.border-grey {
+.color-grey {
+    color: #F2F2F2;
+}
+
+.color-grey.fa-star {
     color: #F2F2F2;
 }
 
@@ -280,11 +291,7 @@ li.filter-btn:hover::after {
     height: auto;
 }
 
-.center h1, .center h2 {
-    margin-left: 15px;
-}
-
-.lodging, .pop, .act {
+.lodging, .pop {
     padding: 27px;
 }
 
@@ -327,22 +334,21 @@ article {
 }
 
 .lodging a {
-    width: 257px;
-    height: 20%;
+    width: 350px;
+    height: 250px;
 }
 
 .lodging article {
-    width: 100%;
     width: 100%;
 }
 
 .lodging .card-img {
     border-radius: 15px 15px 0 0;
-    height: 120px;
+    height: 200px;
 }
 
-.card-img img {   
-    width: 100%;
+.lodging img {   
+    width: 110%;
 }
 
 /*
@@ -351,7 +357,7 @@ article {
 
 section.pop {
     width: 31.4%;
-    min-width: 400px;
+    min-width: 420px;
     margin-left: 41px;
     padding-right: 41px;
     padding-left: 41px;
@@ -374,10 +380,11 @@ section.pop {
 
 .pop .card {
     width: 100%;
-    height: 150px;
+    height: 180px;
 }
 
 .pop .card-text {
+    width: 62%;
     padding-left: 10px;
 }
 
@@ -387,7 +394,7 @@ section.pop {
 }
 
 .pop img {
-    width: 200%;
+    width: 220%;
 }
 
 .pop article {
@@ -406,14 +413,13 @@ section.pop {
     margin-top: 20px;
 }
 
-.act .act-box {
+.act-box {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-content: space-between;
     margin-top: 10px;
-    margin-left: -45px;
-    margin-right: -45px;
     height: 100%;
 }
 
@@ -422,24 +428,22 @@ section.pop {
 }
 
 .card2 {
-    height: 46.25%;
+    height: 46%;
 }
 
 .card3 {
-    height: 35.2%;
+    height: 35%;
 }
 
 .card5 {
-    height: 40.74%;
+    height: 40%;
 }
 
 .card6 {
-    height: 40.74%;
+    height: 42%;
 }
 
-.act .card, .act .card:hover {
-    margin-left: 20px;
-    margin-right: 20px;
+.act .card {
     margin-bottom: 45px;
     border-radius: 25px;
     width: 22%;
@@ -473,7 +477,6 @@ section.pop {
 
 .flex-row {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .card, .card:hover {
@@ -494,12 +497,17 @@ section.pop {
     margin-top: 10px;
     margin-left: 10px;
     margin-bottom: 5px;
-    font-size: 15px;
+    font-size: 14px;
 }
 
-.card-text > h2{
+.card-title {
     margin: 0;
-    font-size: 15px;
+    font-size: 17px;
+}
+
+.pop .card-rating {
+    position: absolute;
+    bottom: 12px;
 }
 
 .fa-star {
@@ -544,10 +552,21 @@ footer a:hover {
 
 
 @media screen and (max-width: 992px) {
-       
+
+    .lodging a {
+        width: 100%;
+    }
+
+    .lodging img {
+        width: 210%;
+    }
 }
 
 @media screen and (max-width: 768px) {
+    
+    body {
+        width: 100%;
+    }
     
     header {
         flex-direction: column;
@@ -559,8 +578,8 @@ footer a:hover {
 
     #logo {
         display: block;
-        margin-left: 44%;
-        margin-right: auto;
+        align-self: center;
+        margin-left: 30px;
     }
     
     nav {
@@ -589,6 +608,50 @@ footer a:hover {
         color: #0065FC;
     }
 
+    main {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .search {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .search-champ {
+        width: 100%;
+    }
+
+    form {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .search-btn {
+        display: none;
+    }
+
+    .search-btn--small {
+        background-color: #0065FC;
+        border: 1px solid #0065FC;
+        color: white;
+        padding: 18px 18px 18px 18px;
+        margin-left: -10px;
+        font-size: 17px;
+        border-radius: 15px 15px 15px 15px;
+    }
+
+    
+    .info-icon {
+        display: inline-block;
+        margin-right: 10px;
+    }
+
+    .filter {
+        flex-direction: column;
+    }
+
     section {
         border-radius: unset;
     }
@@ -596,13 +659,14 @@ footer a:hover {
     .center {
         flex-direction: column-reverse;
         width: auto;
-        margin-left: -3.6%;
-        margin-right: -3.8%;
     }
 
     #lodging, #pop, #act {
-        width: auto;
+        width: 100%;
+        height: auto;
         margin: 0;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .lodging {
@@ -610,16 +674,47 @@ footer a:hover {
         border-radius: unset;
     }
 
+    .lodging img {
+        width: 160%;
+    }
+    
+    section.pop {
+        min-width: 0;
+    }
+
+    .pop .card {
+        height: 150px;
+    }
+
+    .pop img {
+        width: 270%;
+    }
+
     .act-box {
         flex-wrap: nowrap;
         width: 100%;
         height: auto;
-        margin-left: -40px;
+    }
+
+    .act .card {
+        width: auto;
+        height: 200px;
+    }
+
+    .act .card:hover {
+        margin-bottom: 45px;
+    }
+
+    .act .card-img {
+        height: 170px;
     }
 
     footer {
         flex-direction: column;
+        width: 100%;
     }
 
-    
+    footer div {
+        width: 100%;
+    }
 }
