--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ li {
 
 a, a:hover, a:visited {
     display: flex;
+    align-items: center;
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -99,14 +100,13 @@ nav {
 }
 
 nav a {
-    align-content: center;
-    width: 50%;
+    justify-content: center;
+    width: 100%;
     height: 100%;
-    border-top: 2px white solid;
+    color: inherit;
 }
 
 nav a:hover {
-    border-top: 2px #0065FC solid;
     color: #0065FC;
 }
 
@@ -115,10 +115,13 @@ nav li {
     align-content: center;
     height: auto;
     width: 100%;
-    padding: 35px 0px 35px 0px;
+    border-top: 2px white solid;
+    padding: 0;
 }
 
-
+nav li:hover {
+    border-top: 2px #0065FC solid;
+}
 
 /* 
 * 
@@ -602,20 +605,28 @@ footer a:hover {
     }
 
     nav li {
-        padding: 20px 20px;
+        border-top: none;
+        
         align-content: center;
         height: 100%;
-        width: 100%;
+        width: 50%;
+        border-top: none;
+        border-bottom: 2px white solid;
+    }
+
+    nav li:hover {
+        border-top: none;
+        border-bottom: 2px #0065FC solid;
     }
     
     nav a {
+        padding: 20px 20px;
         border-top: none;
         border-bottom: 2px white solid;
     }
 
     nav a:hover {
-        border-top: none;
-        border-bottom: 2px #0065FC solid;
+        padding: 20px 20px;
         color: #0065FC;
     }
 
