--- a/css/style.css
+++ b/css/style.css
@@ -620,13 +620,13 @@ footer a:hover {
     }
     
     nav a {
-        padding: 20px 20px;
+        padding: 20px;
         border-top: none;
         border-bottom: 2px white solid;
     }
 
     nav a:hover {
-        padding: 20px 20px;
+        padding: 20px;
         color: #0065FC;
     }
 
@@ -664,7 +664,6 @@ footer a:hover {
         border-radius: 15px 15px 15px 15px;
     }
 
-    
     .info-icon {
         display: inline-block;
         margin-right: 10px;
@@ -703,16 +702,12 @@ footer a:hover {
     .act-box {
         flex-wrap: nowrap;
         width: 100%;
-        height: auto;
+        height: 1380px;
     }
 
     .act .card {
-        width: auto;
+        width: 100%;
         height: 200px;
-    }
-
-    .act .card:hover {
-        margin-bottom: 45px;
     }
 
     .act .card-img {
