--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 0 auto 0 auto;
     padding: 0px;
 }
 
@@ -69,12 +68,12 @@ a, a:hover, a:visited {
 
 /* 
 * 
-*  Header
+*  HEADER
 *
 */
 
 header {
-    margin: 0 3.5% 0 3.5%;
+    margin: 0 3% 0 3%;
     padding: 0px;
     height: 120px;
     width: auto;
@@ -103,7 +102,6 @@ nav a {
     justify-content: center;
     width: 100%;
     height: 100%;
-    color: inherit;
 }
 
 nav a:hover {
@@ -125,15 +123,15 @@ nav li:hover {
 
 /* 
 * 
-*  Main
+*  MAIN
 *
 */
 
 main {
     display: flex;
     flex-direction: column;
-    margin-left: 3.5%;
-    margin-right: 3.5%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 section {
@@ -143,7 +141,7 @@ section {
 }
 
 /*
-*  Section recherche
+*  SEARCH
 */
 
 .search {
@@ -166,10 +164,9 @@ form {
 }
 
 .fa-map-marker-alt {
-    background-color: #F2F2F2;
     padding: 17px 18px 19px 18px;
     font-size: 18px;
-    border: 1px solid F2F2F2;
+    border: 1px solid #F2F2F2;
     border-radius: 15px 0 0 15px;
 }
 
@@ -236,7 +233,7 @@ li.filter-btn::after {
     position: absolute;
     width: 100%;
     height: 100%;
-    margin: -1px 0 0 -3px;
+    margin-left: -3px;
     background: #DEEBFF;
     border: 3px solid #DEEBFF;
     border-radius: 40px;
@@ -252,8 +249,7 @@ li.filter-btn:hover::after {
 
 .background-blue {
     color: #DEEBFF;
-    font-size: 51px;
-    margin-top: -1px;
+    font-size: 50px;
     margin-left: -5px;
 }
 
@@ -283,8 +279,8 @@ li.filter-btn:hover::after {
 }
 
 /*
-*  Section centrale 
-*    ( Hébergements + Populaires )
+*  CENTER
+*    ( LODGING + POPULAR )
 */ 
 
 .center {
@@ -295,7 +291,7 @@ li.filter-btn:hover::after {
 }
 
 .lodging, .pop {
-    padding: 27px 41px 27px 41px;
+    padding: 27px 2% 27px 2%;
 }
 
 article {
@@ -320,50 +316,56 @@ article {
 }
 
 /*
-*   Hébergements
+*   LODGING
 */
 
 .lodging {
-    width: 65.7%;
+    width: 66.6%;
     height: 100%;
 }
 
-.lodging > div{
+.lodging-box {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -2%;
     padding: 0;
-    width: 100%;
-    justify-content: space-around;
+    width: 104%;
+    justify-content: space-between;
 }
 
-.lodging a {
-    width: 330px;
+.lodging .card {
+    width: 30%;
+    min-width: 280px;
     height: 250px;
+    margin-left: 2%;
+    margin-right: 2%;
+    flex: 1 0 5%;
 }
 
-.lodging article {
-    width: 100%;
+.lodging > a {
+    width: fit-content;
+    height: fit-content;
 }
 
 .lodging .card-img {
-    border-radius: 15px 15px 0 0;
+    width: 100%;
     height: 200px;
 }
 
 .lodging img {   
-    min-width: 300px;
+    width: 110%;
 }
 
 /*
-*   pop
+*   POPULAR
 */
 
-section.pop {
-    width: 31.4%;
-    min-width: 420px;
-    margin-left: 41px;
-    padding-right: 41px;
-    padding-left: 41px;
+.pop {
+    width: 33.3%;
+    min-width: 350px;
+    margin-left: 2%;
+    padding-right: 2%;
+    padding-left: 2%;
     padding-bottom: 0;
 }
 
@@ -393,11 +395,16 @@ section.pop {
 
 .pop .card-img {
     width: 38%;
+    min-width: 130px;
     border-radius: 15px 0 0 15px;
 }
 
 .pop img {
-    min-width: 270px;
+    width: 200%;
+}
+
+.pop .ver-img {
+    width: 100%;
 }
 
 .pop article {
@@ -407,7 +414,7 @@ section.pop {
 }
 
 /*
-*   act
+*   ACTIVITIES
 */
 
 .act {
@@ -459,6 +466,7 @@ section.pop {
 }
 
 .act .card-img {
+    width: 100%;
     height: auto;
 }
 
@@ -472,7 +480,7 @@ section.pop {
 }
 
 .act img {
-    min-width: 300px;
+    min-height: 100%;
 }
 
 .act-card--big img {
@@ -481,10 +489,6 @@ section.pop {
 
 .background-grey {
     background-color: #F2F2F2;
-}
-
-.flex-row {
-    display: flex;
 }
 
 .card, .card:hover {
@@ -510,7 +514,7 @@ section.pop {
 
 .card-title {
     margin: 0;
-    font-size: 17px;
+    font-size: 20px;
 }
 
 .pop .card-rating {
@@ -524,7 +528,7 @@ section.pop {
 
 /* 
 * 
-*  Footer
+*  FOOTER
 *
 */
 
@@ -533,7 +537,7 @@ footer {
     justify-content: left;
     height: auto;
     width: 100%;
-    padding: 40px;
+    padding: 40px 3% 40px 3%;
     margin: 0;
 }
 
@@ -557,7 +561,11 @@ footer a:hover {
     color: #777;
 }
 
-
+/*
+*
+*   TABLET
+*
+*/
 
 @media screen and (max-width: 992px) {
 
@@ -565,23 +573,28 @@ footer a:hover {
         width: 50%;
     }
 
-    .lodging a {
+    .lodging .card {
         width: 100%;
+    }
+
+    .lodging img {
+        width: 110%;
     }
 
     section.pop {
         width: 50%;
-        min-width: 0;
     }
 
 }
 
+/*
+*
+*   MOBILE
+*
+*/
+
 @media screen and (max-width: 768px) {
-    
-    body {
-        width: 100%;
-    }
-    
+        
     header {
         flex-direction: column;
         justify-content: center;
@@ -679,7 +692,7 @@ footer a:hover {
 
     .center {
         flex-direction: column-reverse;
-        width: auto;
+        width: 100%;
     }
 
     #lodging, #pop, #act {
@@ -689,14 +702,37 @@ footer a:hover {
         padding-left: 20px;
         padding-right: 20px;
     }
-
+    
     .lodging {
         background-color: transparent;
         border-radius: unset;
     }
 
+    .lodging-box {
+        margin: 0;
+        width: 100%;
+    }
+
+    .lodging .card {
+        width: 100%;
+        min-width: 100%;
+        margin-left: 0;
+    }
+
+    .pop {
+        min-width: unset;
+    }
+
     .pop .card {
-        height: 150px;
+        height: 170px;
+    }
+
+    .pop img {
+        width: 250%;
+    }
+    
+    .pop .ver-img {
+        width: 130%;
     }
 
     .act-box {
@@ -714,13 +750,16 @@ footer a:hover {
         height: 170px;
     }
 
-    .act-card--big img {
-        min-width: 300px;
+    .act img {
+        width: 100%;
     }
 
     footer {
         flex-direction: column;
         width: 100%;
+        max-height: 520px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     footer div {
