--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin: 0 auto;
+    max-width: 1440px;
 }
 
 h1, h2 {
@@ -411,6 +413,8 @@ article {
 .show-more {
     font-size: 18px;
     font-weight: 800;
+    width: fit-content;
+    width: -moz-fit-content;
 }
 
 /*
@@ -466,8 +470,7 @@ article {
 */
 
 .act {
-    height: 468px;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     margin-top: 48px;
 }
 
@@ -577,7 +580,7 @@ footer a:hover {
 *
 */
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
 
     .filter {
         flex-direction: column;
@@ -617,7 +620,18 @@ footer a:hover {
     }
 
     .pop .card {
+        height:unset;
+        min-height: 144px;
         width: 31%;
+    }
+
+    footer {
+        justify-content: space-around;
+    }
+
+    footer > div {
+        width: fit-content;
+        width: -moz-fit-content;
     }
 }
 
@@ -627,7 +641,7 @@ footer a:hover {
 *
 */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
  
     header {
         flex-direction: column;
@@ -774,13 +788,13 @@ footer a:hover {
     .pop-box {
         flex-direction: column;
         width: 100%;
-        height: 448px;
+        height: 456px;
         gap: unset;
     }
 
     .pop .card {
         width: 100%;
-        height: 142px;
+        height: 144px;
     }
     
     .pop .card-img {
@@ -792,7 +806,6 @@ footer a:hover {
     }
 
     .act-box {
-        flex-wrap: nowrap;
         width: 100%;
         height: 1264px;
         margin-top: 16px;
