--- a/css/style.css
+++ b/css/style.css
@@ -77,16 +77,15 @@ a, a:hover, a:visited {
 */
 
 header {
-    margin: 0;
-    padding: 0 3.6%;
-    height: 120px;
     display: flex;
     justify-content: space-between;
     align-content: center;
+    margin: 0;
+    padding: 0 3.6%;
+    height: 120px;
 }
 
 #logo {
-    display: flex;
     height: 50px;
     margin: 45px 0 auto 15px;
 }
@@ -626,12 +625,11 @@ footer a:hover {
     }
 
     footer {
-        justify-content: space-around;
+        justify-content: space-between;
     }
 
     footer > div {
-        width: fit-content;
-        width: -moz-fit-content;
+        width: 30%
     }
 }
 
